Fix removePppoe action and text

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </script>
 
     <script type="text/x-handlebars" data-template-name="confirmPppoeRemoval">
-      {{#modal-form title='Odebrat DHCP' ok='removeDhcp' close='closeModal'}}
+      {{#modal-form title='Odebrat PPPoE' ok='removePppoe' close='closeModal'}}
         <p>Chcete opravdu odebrat PPPoE pro {{model.service.id}} {{model.service.name}}?</p>
       {{/modal-form}}
     </script>
