--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="row">  
           <div class="col-sm-6 form-group">   
             <label>Login:</label>
-            {{input class="form-control" name="login" value=model.form.pppoe.login type=text disabled="disabled"}}
+            {{input class="form-control" name="login" value=model.form.pppoe.login type=text}}
           </div>
           <div class="col-sm-6 form-group">
             <label>Password:</label>
