Make switch and IP links in new tab
When clicking on Service DHCP/switch two new tabs would pop up
showing switch page. The same for PPPoE/IP.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="col-md-12">
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Switch:</strong></p></div>
-                  <div class="col-sm-10">{{model.dhcp.switch.name}}</div>
+                  <div class="col-sm-10"><a href="#" {{action 'openTabs' (concat 'http://' model.dhcp.switch.name) (concat 'https://' model.dhcp.switch.name)}}>{{model.dhcp.switch.name}}</a></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Port:</strong></p></div>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>IP:</strong></p></div>
-                  <div class="col-sm-10">{{model.pppoe.ip.value}}</div>
+                  <div class="col-sm-10"><a href="#" {{action 'openTabs' (concat 'http://' model.pppoe.ip.value ':65535') (concat 'http://' model.pppoe.ip.value)}}>{{model.pppoe.ip.value}}</a></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>MAC:</strong></p></div>
