--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                   <div class="col-sm-10">{{model.pppoe.interface}}</div>
                 </div>
                 <div class="row">
+                  <div class="col-sm-2"><p class="text-right"><strong>Location:</strong></p></div>
+                  <div class="col-sm-10">{{model.pppoe.location}}</div>
+                </div>
+                <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>IP:</strong></p></div>
                   <div class="col-sm-10"><a href="#" {{action 'openTabs' (concat 'http://' model.pppoe.ip.value ':65535') (concat 'http://' model.pppoe.ip.value)}}>{{model.pppoe.ip.value}}</a></div>
                 </div>
@@ -204,6 +208,15 @@
           <div class="col-sm-6 form-group">   
             <label>Interface:</label>
             {{input class="form-control" name="interface" value=model.form.pppoe.interface type=text}}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 form-group">
+            <label>Location:</label>
+            {{input class="form-control" value=model.form.pppoe.location type=text}}
+          </div>
+          <div class="col-sm-6 form-group">
+            <label></label>
           </div>
         </div>
         <div class="row">
