--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>MAC:</strong></p></div>
-                  <div class="col-sm-10">{{model.pppoe.mac.value}}</div>
+                  <div class="col-sm-10">{{uppercase model.pppoe.mac.value}}</div>
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Login:</strong></p></div>
