--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
         </span>
       </h2>
       <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h3>
+      {{#if model.service.address}}
+        {{#with model.service.address}}
+          {{street}} {{#if orientation_number}}{{orientation_number}}/{{/if}}{{descriptive_number}},
+          {{#if apartment}} byt {{apartment}},{{/if}} {{postal_code}} {{town}}, {{country}}
+        {{/with}}
+      {{/if}}
       <p>{{model.service.info}}</p>
       <div class="row">
         {{#if model.dhcp.port}}
