--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h3>
       {{#if model.service.address}}
         {{#with model.service.address}}
-          {{street}} {{#if orientation_number}}{{orientation_number}}/{{/if}}{{descriptive_number}},
+          {{street}} {{descriptive_number}}{{#if orientation_number}}/{{orientation_number}}{{/if}},
           {{#if apartment}} byt {{apartment}},{{/if}} {{postal_code}} {{town}}, {{country}}
         {{/with}}
       {{/if}}
