--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
       </h2>
       <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h3>
       {{#if model.service.address}}
-        {{#with model.service.address}}
-          {{street}} {{descriptive_number}}{{#if orientation_number}}/{{orientation_number}}{{/if}},
-          {{#if apartment}} byt {{apartment}},{{/if}} {{postal_code}} {{town}}, {{country}}
-        {{/with}}
+        {{address model.service.address}}
       {{/if}}
       <p>{{model.service.info}}</p>
       <div class="row">
