Enable service status editing

--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
             {{view "select"
                class="form-control"
                content=statuses
-               value=model.form.service.status
-               disabled=true}}
+               value=model.form.service.status}}
           </div>
         </div>        
         <div class="row">
