Fix edit PPPoE routers content

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <label>Master:</label>
             {{view "select"
                class="form-control"
-               content=switches
+               content=routers
                optionValuePath="content.name"
                optionLabelPath="content.name"
                value=model.form.pppoe.master}}
