--- a/index.html
+++ b/index.html
@@ -175,9 +175,14 @@
                   <div class="col-sm-2"><p class="text-right"><strong>IP:</strong></p></div>
                   <div class="col-sm-10">
                     {{#if isPppoeStaticIp}}
-                      <a href="#" {{action 'openTabs' (concat 'http://' model.pppoe.ip.value ':65535') (concat 'http://' model.pppoe.ip.value)}}>{{model.pppoe.ip.value}}</a>
+                      {{model.pppoe.ip.value}}
                     {{else}}
                       {{model.pppoe.ip_class}}
+                    {{/if}}
+                    {{#if lastPppoeIp}}
+                      &nbsp;(poslední IP:
+                      <a href="#" {{action 'openTabs' (concat 'http://' lastPppoeIp ':65535') (concat 'http://' lastPppoeIp)}}>{{lastPppoeIp}}</a>
+                      <span class="glyphicon glyphicon-new-window"></span>)
                     {{/if}}
                   </div>
                 </div>
