--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
           <a href="http://www.google.com/maps?q={{model.customer.street}}, {{model.customer.city}}&t=k" target="_blank"><i class="glyphicon glyphicon-map-marker"></i></a>
           &nbsp;{{model.customer.email}}
           <a href="mailto:{{model.customer.email}}"><i class="glyphicon glyphicon-envelope"></i></a>
-          &nbsp;{{model.customer.phone}} <i class="glyphicon glyphicon-phone"></i>
+          &nbsp;{{model.customer.phone}}
+          <a href="#" {{action 'openModal' 'formEditSms' model}}><i class="glyphicon glyphicon-phone"></i></a>
         </span>
       </h2>
       <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h3>
@@ -229,6 +230,17 @@
       {{/modal-form}}
     </script>
 
+    <script type="text/x-handlebars" data-template-name="formEditSms">
+      {{#modal-form title='Poslat SMS' ok='submit' close='closeModal'}}
+        <h4>{{model.customer.name}} {{model.customer.phone}}</h4>
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label>Zpráva:</label>
+            {{input class="form-control" value=smsMessage autofocus="true"}}
+          </div>
+        </div>        
+      {{/modal-form}}
+    </script>
 
     <script type="text/x-handlebars" data-template-name="formEditDhcp">
       {{#modal-form title='Upravit' ok='submit' close='closeModal'}}
