--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="navbar-brand" href="..">Home</a>
           <a class="navbar-brand" href="#/services">Služby</a>
           <a class="navbar-brand" href="http://localhost:9090">Přidej službu</a>
-          <a class="navbar-brand" href="#/changelog"><span class="small">Sezam změn</span></a>
+          <a class="navbar-brand" href="#/changelog"><span class="small">Seznam změn</span></a>
           <div class="navbar-right navbar-brand">
             <span class='glyphicon glyphicon-user'></span>
             {{model.user.name}}|{{model.user.operation_country}}
