Add price to service detail
Closes silesnet/silesnet.github.io#46

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a href="#" {{action 'openModal' 'formEditSms' model}}><i class="glyphicon glyphicon-phone"></i></a>
         </span>
       </h2>
-      <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h3>
+      <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs, {{model.service.price}} {{serviceCurrency}}</h3>
 
       {{#if model.service.address}}
         <p>{{address model.service.address}}</p>
