--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="input-group-addon" title="Aktivní zákazníci">
             {{active-button name="isActive" value=model.isActive}}
         </span>
-        {{input id="service_search" class="form-control" type="text" value=model.query placeholder="Customer or Agreement" autofocus="true"}}
+        {{input id="service_search" class="form-control" type="text" value=model.query placeholder="Customer or Agreement" autofocus="autofocus"}}
         <div class="input-group-btn">
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
@@ -180,7 +180,7 @@
                     {{else}}
                       {{model.pppoe.ip_class}}
                     {{/if}}
-                    {{#if lastPppoeIp}} 
+                    {{#if lastPppoeIp}}
                       &nbsp;(poslední IP:
                       <a href="#" {{action 'openTabs' (concat 'http://' lastPppoeIp ':65535') (concat 'http://' lastPppoeIp)}}>{{lastPppoeIp}}</a>
                       <span class="glyphicon glyphicon-new-window"></span>)
@@ -220,13 +220,13 @@
                optionLabelPath="content.name"
                value=model.form.service.status}}
           </div>
-        </div>        
+        </div>
         <div class="row">
           <div class="col-sm-12 form-group">
             <label>Poznámky:</label>
             {{textarea class="form-control" value=model.form.service.info rows="5"}}
           </div>
-        </div>        
+        </div>
       {{/modal-form}}
     </script>
 
@@ -236,9 +236,9 @@
         <div class="row">
           <div class="col-sm-12 form-group">
             <label>Zpráva:</label>
-            {{input class="form-control" value=smsMessage autofocus="true"}}
+            {{input class="form-control" value=smsMessage autofocus="autofocus"}}
           </div>
-        </div>        
+        </div>
       {{/modal-form}}
     </script>
 
@@ -259,9 +259,9 @@
             <label>Port:</label>
             {{view App.PortField value=model.form.dhcp.port}}
           </div>
-        </div>        
+        </div>
         <div class="row">
-          <div class="col-sm-6 form-group">   
+          <div class="col-sm-6 form-group">
             <label>IP:</label>
             {{view App.IPAddressField value=model.form.dhcp.ip placeholder="AUTO"}}
           </div>
@@ -283,11 +283,11 @@
                value=model.form.pppoe.master}}
           </div>
           {{#if isWireless}}
-            <div class="col-sm-6 form-group">   
+            <div class="col-sm-6 form-group">
               <label>Interface:</label>
               {{input class="form-control" name="interface" value=model.form.pppoe.interface type=text}}
             </div>
-          {{/if}}  
+          {{/if}}
         </div>
         <div class="row">
           <div class="col-sm-6 form-group">
@@ -319,9 +319,9 @@
               <label>MAC:</label>
               {{view App.MACAddressField value=model.form.pppoe.mac.value}}
             </div>
-          {{/if}}  
-        </div>        <div class="row">  
-          <div class="col-sm-6 form-group">   
+          {{/if}}
+        </div>        <div class="row">
+          <div class="col-sm-6 form-group">
             <label>Login:</label>
             {{input class="form-control" name="login" value=model.form.pppoe.login type=text}}
           </div>
@@ -387,7 +387,7 @@
         {{flash.message}}
       {{/if}}
     </script>
-  
+
     <script type="text/javascript" language="JavaScript" src="js/jquery.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui-datepicker-cs.js"></script>
