--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="input-group-addon" title="Aktivní zákazníci">
             {{active-button name="isActive" value=model.isActive}}
         </span>
-        {{input id="service_search" class="form-control" type="text" value=model.query placeholder="Customer or Agreement" autofocus="autofocus"}}
+        {{input id="service_search" class="form-control autofocus" type="text" value=model.query placeholder="Customer or Agreement"}}
         <div class="input-group-btn">
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
@@ -236,7 +236,7 @@
         <div class="row">
           <div class="col-sm-12 form-group">
             <label>Zpráva:</label>
-            {{input class="form-control" value=smsMessage autofocus="autofocus"}}
+            {{input class="form-control autofocus" value=smsMessage}}
           </div>
         </div>
       {{/modal-form}}
