Refactor user session restoration

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="navbar-brand" href="#/changelog"><span class="small">Seznam změn</span></a>
           <div class="navbar-right navbar-brand">
             <span class='glyphicon glyphicon-user'></span>
-            {{model.user.name}}|{{model.user.operation_country}}
+            {{session.userName}}|{{session.userCountry}}
           </div>
         </div>
       </nav>
