--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <span class="input-group-addon" title="Aktivní zákazníci">
             {{active-button name="isActive" value=isActiveFilter}}
         </span>
-        {{input id="service_search" class="form-control autofocus" type="text" value=model.query placeholder="Customer or Agreement"}}
+        {{input id="service_search" class="form-control autofocus" type="text" value=query placeholder="Customer or Agreement"}}
         <div class="input-group-btn">
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
       </div>
-      {{#if model.services}}
+      {{#if services}}
         <table class="table table-striped">
           <tbody>
-          {{#each model.services as |service|}}
+          {{#each services as |service|}}
             <tr {{action 'editService' service}} class="clickable">
               <td>{{service.service_id}}</td>
               <td>{{service.customer_name}}</td>
