Add area into PPPoE detail

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                   <div class="col-sm-10">{{model.pppoe.master}}</div>
                 </div>
                 <div class="row">
+                  <div class="col-sm-2"><p class="text-right"><strong>Area:</strong></p></div>
+                  <div class="col-sm-10">{{model.pppoe.area}}</div>
+                </div>
+                <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Interface:</strong></p></div>
                   <div class="col-sm-10">{{model.pppoe.interface}}</div>
                 </div>
