Disable ediding of PPPoE login and password

--- a/index.html
+++ b/index.html
@@ -333,11 +333,11 @@
         </div>        <div class="row">
           <div class="col-sm-6 form-group">
             <label>Login:</label>
-            {{input class="form-control" name="login" value=model.form.pppoe.login type=text}}
+            {{input disabled=true class="form-control" name="login" value=model.form.pppoe.login type=text}}
           </div>
           <div class="col-sm-6 form-group">
             <label>Password:</label>
-            {{input class="form-control" value=model.form.pppoe.password type=text}}
+            {{input disabled=true class="form-control" value=model.form.pppoe.password type=text}}
           </div>
         </div>
       {{/modal-form}}
