--- a/index.html
+++ b/index.html
@@ -190,10 +190,11 @@
                     {{else}}
                       {{model.pppoe.ip_class}}
                     {{/if}}
-                    {{#if lastPppoeIp}}
-                      &nbsp;(poslední IP:
+                    {{#if lastPppoeIp}}<br/>
+                      <small>poslední IP:
                       <a href="#" {{action 'openTabs' (concat 'http://' lastPppoeIp ':65535') (concat 'http://' lastPppoeIp)}}>{{lastPppoeIp}}</a>
-                      <span class="glyphicon glyphicon-new-window"></span>)
+                      <span class="glyphicon glyphicon-new-window"></span>
+                      {{#if lastPppoeIpDate}}, {{lastPppoeIpDate}}{{/if}}</small>
                     {{/if}}
                   </div>
                 </div>
